intro: strategy & data

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -219,15 +219,16 @@ also deals with an issue that lies at the core of the discussion of the future o
 developed countries; that is, the location of large-scale events in central cities that bring
 prosperity but also temporary increases in contagion, congestion and crime" from MPS(2018)
 
+\newpage
+% STRATEGY & DATA
+The aim of this paper is to undertake an in-depth examination of the effects that public mass events exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated. To get at the impact of soccer matches on violent behavior I employ a generalized difference-in-differences approach that exploits the plausibly random variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while additionally accounting for other possible confounding variation coming from weather and holidays. In order to use the time series and cross-sectional variation, I construct a panel at the municipality-day level. I collect and match data from various sources. First, the time and location of all games in the first three leagues are obtained via web-scraping. Second, the main outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the federal level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and to build the outcome variable. 
 
-% soccer games and strategy how to estimate causal effect
-The aim of this paper is to undertake an in-depth examination of the effects that public mass events exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated.
+
+
+% findings
 My results allow me to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer.
-data: panel data set (daily and municipality information)
-I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, holidays, ... Can I use that?
 
 
-% data and findings
 
 % channels 
 
@@ -236,14 +237,14 @@ I compare the level of assaults on days with and without home games while contro
 		
 		
 		
-\newpage		
+\bigskip		
 % back of envelope calculations
 Back-of-the envelope calculations based on my estimates indicate that the crime effects of football games are substantial. For example, soccer games in the first three leagues of the German Football league system explain 17.7 percent of the assault reports and lead to 18,770 additional assaults in the soccer season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), this implies an annual social cost of 95 million euros.\footnote{The costs of assaults vary greatly around the globe. In the US, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the estimated social costs are 6,400 euros \citep{roper2006estimating}, and in GB the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
 	
 
 
 % Literature
-This paper complements the literature on sport events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are too close. This suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researcher focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the  Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches in Barcelona on criminal behavior. They match reports on registered crime in the city of Barcelona (2007-2011) with footballl matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. By drawing on the geocoded crime data for the city of Barcelona they run exploratory spatial data analysis and spatial regressions at the census tract level. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium are relatively smaller. The effects of soccer matches on assaults are analogously to thefts. In particular, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
+This paper complements the literature on sport events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower ranked teams win over better ranked teams. The effects for away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches and for teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are too close. This suggests an asymmetry of the gain-loss utility function. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researcher focus on football matches to estimate the effect of large scale sport events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches in Barcelona on criminal behavior. They match reports on registered crime in the city of Barcelona (2007-2011) with footballl matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. By drawing on the geocoded crime data for the city of Barcelona they run exploratory spatial data analysis and spatial regressions at the census tract level. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium are relatively smaller. The effects of soccer matches on assaults are analogously to thefts. In particular, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
 %\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
 
 
@@ -366,7 +367,7 @@ Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution o
 \subsection{Soccer data}
 The data on soccer matches is self-collected and is obtained via web-scraping from kicker.de and transfermarkt.de. It captures all matches that are carried out in the context of the first three leagues of the German football league system over the period January 2011 until May 2015. The data contains detailed match and table standing parameters, e.g. time and place of the match, attendance, pregame point difference, goals, penalties, cards, referee characteristics, among others. Furthermore, there is comprehensive data on the single teams; such as size of the team, average age, market value, and number of foreign players. The stadiums where the matches take place are geographically encoded and will "activate" the treatment in the region in which the stadium is located. Figure \ref{fig_soc_ext:map_gem_stadiums} depicts a map with all 69 stadiums in the data set. 
 
-% XXX  stadiums in which not at least a full season is played are excluded from the analysis.\footnote{This affects the stadiums in Lübeck (1), Reutlingen (12), Elversberg (14), and the Air-Berlin stadium in Dusseldorf (3). The number in parenthesis indicates the number of games that were held in that venue. This excludes 0.6\% of all matches.}
+% XXX stadiums in which not at least a full season is played are excluded from the analysis.\footnote{This affects the stadiums in Lübeck (1), Reutlingen (12), Elversberg (14), and the Air-Berlin stadium in Dusseldorf (3). The number in parenthesis indicates the number of games that were held in that venue. This excludes 0.6\% of all matches.}
 
 Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday. This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. The three different divisions can attract spectators differently, as depicted in Panel C. The `Bundesliga' draws the highest attention with an average audience of 44,000 people per game, followed by the second league with an average 17,000 fans per match, and the lowest league can attract on average a bit less than 6,000 fans per game to show up in the stadium.
 
@@ -460,7 +461,7 @@ In the first step, I consider emotional cues as potential channels of how soccer
 
 
 % game/team prominence (rivals & league)
-Second, I use information about game and team prominence as potential channels. For many sport fans, the affection for the own soccer team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of feelings of dislike, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for rival matches.\footnote{Appendix Table \ref{tab_soc_ext:prominent_games_derbies} gives an overview of rival matches.} The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as rival matches lead to an average increase of 8.320 assaults per million population. This corresponds to more than three times the baseline effect. Although the standard errors are relatively large, as only 2.5\% of the games are classified as rival matches, the effect is significantly different from regular matches. Next to the explanation of mutual dislike of opposing fan groups, it could be the mere prominence of teams/games that attract more (violent) people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the Bundesliga, in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league are significantly larger than the effect of matches from the other two leagues.  
+Second, I use information about game and team prominence as potential channels. For many sport fans, the affection for the own soccer team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of feelings of dislike, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for rival matches.\footnote{Appendix Table \ref{tab_soc_ext:prominent_games_derbies} gives an overview of rival matches.} The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as rival matches lead to an average increase of 8.320 assaults per million population. This corresponds to more than three times the baseline effect. Although the standard errors are relatively large, as only 2.5\% of the games are classified as rival matches, the effect is significantly different from regular matches. Next to the explanation of mutual dislike of opposing fan groups, it could be the mere prominence of teams/games that attract more (violent) people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the Bundesliga, in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league are significantly larger than the effect of matches from the other two leagues.
 Summing up, there is evidence that the prominence of games are a crucial determinant for the size of the effect of soccer matches on the assault rate, where rival matches and games in the top league lead to more assaults.
 
 
@@ -486,7 +487,7 @@ I perform several sensitivity and placebo tests to assess the robustness of the 
 % Alternative econometrics: sample, weights, estimation
 \textbf{Alternative econometric specifications.--} First, I show that the results are not sensitive to alterations of the \textit{sample}. Adjustments to the sample may be necessary as some of the games are played on different days than what was originally planned. The deviation from the original match plan may pose a risk to the allocation of games that is as good as random. For this reason, I drop the set of rescheduled games from the analysis. The results are almost identical to the baseline results.\footnote{From the 4,461 games in the sample, 2.24\% are rescheduled. The vast majority (95\%) are in league three.} Second, I show the effects when leaving out population \textit{weights} from the regressions. The effect of of soccer matches without population weights is considerably larger: a home game leads to an increase in the average assault rate by 5.342 assaults per million population. The higher coefficient compared to the baseline specification indicates that the effects of rural areas must be larger, as they obtain higher relevance when population weights are omitted. Third, I show that my results are robust to a different \textit{estimation} procedure and an alternative measure of the \textit{dependent variable}. In the following, I use the raw number of assaults as the outcome variable. Because of the discrete nature of the dependent variable, and given that there are many cells with zero reports, a Poisson model is the model of choice. The corresponding regression specification reads as follows:
 \begin{align}
-E\left[ \text{Assaults}_{rdmy}\right.&|\left.\text{Gameday}_{rdmy},\vartheta_r,\text{date}_{dmy}, \mathbf{X}_{rdmy}  \right] \nonumber \\ &=  exp\left( \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \text{date}_{dmy} + \lambda\mathbf{X}_{rdmy} \right). 
+E\left[ \text{Assaults}_{rdmy}\right.&|\left.\text{Gameday}_{rdmy},\vartheta_r,\text{date}_{dmy}, \mathbf{X}_{rdmy} \right] \nonumber \\ &= exp\left( \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \text{date}_{dmy} + \lambda\mathbf{X}_{rdmy} \right). 
 \label{eq_soc_ext:poisson_model}
 \end{align}
 
@@ -498,7 +499,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
  
  
 % Placebo games
-\textbf{Placebo games.--} I estimate the impact of \textit{placebo games} on the assault rate in order to check whether the obtained results are observed just by chance.\footnote{Unfortunately, there are no offenses that may be used as placebo outcomes. This is due to the fact that most of the offenses covered in the PCS are potentially affected by soccer games.} The true matches take place on roughly  5\% of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the true matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A shows the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B, shows the distribution of the t-statistics. The red area under the kernel density indicates significant estimates when using a significance level of $\alpha=0.05$. Panel C shows that 6.57\% of the estimates are significantly different from zero with 10,000 iterations. With a significance level of $\alpha=0.01$ , there are 3.06\% significant estimates. The low levels of significant coefficients support the idea that the results obtained earlier are not only observed by pure chance. 
+\textbf{Placebo games.--} I estimate the impact of \textit{placebo games} on the assault rate in order to check whether the obtained results are observed just by chance.\footnote{Unfortunately, there are no offenses that may be used as placebo outcomes. This is due to the fact that most of the offenses covered in the PCS are potentially affected by soccer games.} The true matches take place on roughly 5\% of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the true matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A shows the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B, shows the distribution of the t-statistics. The red area under the kernel density indicates significant estimates when using a significance level of $\alpha=0.05$. Panel C shows that 6.57\% of the estimates are significantly different from zero with 10,000 iterations. With a significance level of $\alpha=0.01$ , there are 3.06\% significant estimates. The low levels of significant coefficients support the idea that the results obtained earlier are not only observed by pure chance. 
 
 
 
@@ -652,7 +653,7 @@ larger effects for prominent games
 \begin{landscape}
 	\vspace*{\fill}
 	\begin{figure}[H]\centering
-		\caption{The stadiums and the closest weather monitors and  neighboring regions}\label{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}
+		\caption{The stadiums and the closest weather monitors and neighboring regions}\label{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}
 
 		\begin{subfigure}[h]{0.47\linewidth}\centering\caption{The closest weather monitors}
 			\includegraphics[width=\linewidth]{maps/soc_ext_2010_2015_Gemeinde_stadiums_nearest_monitor_100.png}
@@ -1093,7 +1094,7 @@ larger effects for prominent games
 \underline{Further Possible interactions:} 
 \begin{itemize}
 	\item $(\gamma_d \times \delta_m)$: month-specific DOW fixed effects
-	\item $r \times time$: e.g. $r \times w$, $r \times y \times m$,  $r \times y \times w$
+	\item $r \times time$: e.g. $r \times w$, $r \times y \times m$, $r \times y \times w$
 \end{itemize}
 
 \underline{Other approaches to compute standard errors:}
